Fix design flaw on smaller screens
The last image sometimes hopped down to a new row

--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,10 @@ footer .footerText:last-child {
   width: 100%;
   background-color: #000;
 }
+.bandimage-container .container2 .row .col-md-6 {
+  padding-left: 0px;
+  padding-right: 0px;
+}
 .container3 {
   max-width: 1200px;
   padding-right: 15px;
